# cpp-vs-proj-template

./: CMakeLists.txt  README.md
